--- a/consolidate.ipynb
+++ b/consolidate.ipynb
@@ -306,87 +306,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       household_id    person_id  persno transit_commuter  Travel Mode_TAT  \\\n",
-      "0         140000374  14000037402       2              NaN              NaN   \n",
-      "1         140000376  14000037601       1              NaN              NaN   \n",
-      "2         140000382  14000038201       1              NaN              NaN   \n",
-      "3         140000384  14000038401       1              NaN              NaN   \n",
-      "4         140000390  14000039001       1              NaN              NaN   \n",
-      "...             ...          ...     ...              ...              ...   \n",
-      "17853     180256058  18025605804       4              NaN              NaN   \n",
-      "17854     180256271  18025627101       1              NaN              NaN   \n",
-      "17855     180256360  18025636001       1              NaN              NaN   \n",
-      "17856     180256797  18025679701       1              NaN              NaN   \n",
-      "17857     180256875  18025687501       1              NaN              NaN   \n",
-      "\n",
-      "       Trip Purpose_TAT   age  Non-Motorized Travel  transit_travel_mode  \\\n",
-      "0                   NaN  81.0                   NaN                  NaN   \n",
-      "1                   NaN  53.0                   1.0                  NaN   \n",
-      "2                   NaN  77.0                   NaN                  NaN   \n",
-      "3                   NaN  84.0                   NaN                  NaN   \n",
-      "4                   NaN  74.0                   NaN                  NaN   \n",
-      "...                 ...   ...                   ...                  ...   \n",
-      "17853               NaN  10.0                   NaN                  NaN   \n",
-      "17854               NaN  75.0                   NaN                  NaN   \n",
-      "17855               NaN  38.0                   NaN                  NaN   \n",
-      "17856               NaN  65.0                   NaN                  NaN   \n",
-      "17857               NaN  56.0                   NaN                  NaN   \n",
-      "\n",
-      "       transit_access_mode  ...  wttrdfin_32  wttrdfin_33  wttrdfin_34  \\\n",
-      "0                      NaN  ...            0            0            0   \n",
-      "1                      NaN  ...            0            0            0   \n",
-      "2                      NaN  ...            0            0            0   \n",
-      "3                      NaN  ...            0            0            0   \n",
-      "4                      NaN  ...            0            0            0   \n",
-      "...                    ...  ...          ...          ...          ...   \n",
-      "17853                  NaN  ...            0            0            0   \n",
-      "17854                  NaN  ...            0            0            0   \n",
-      "17855                  NaN  ...            0            0            0   \n",
-      "17856                  NaN  ...            0            0            0   \n",
-      "17857                  NaN  ...            0            0            0   \n",
-      "\n",
-      "       wttrdfin_35  wttrdfin_36  wttrdfin_37  wttrdfin_38  wttrdfin_39  \\\n",
-      "0                0            0            0            0            0   \n",
-      "1                0            0            0            0            0   \n",
-      "2                0            0            0            0            0   \n",
-      "3                0            0            0            0            0   \n",
-      "4                0            0            0            0            0   \n",
-      "...            ...          ...          ...          ...          ...   \n",
-      "17853            0            0            0            0            0   \n",
-      "17854            0            0            0            0            0   \n",
-      "17855            0            0            0            0            0   \n",
-      "17856            0            0            0            0            0   \n",
-      "17857            0            0            0            0            0   \n",
-      "\n",
-      "       wttrdfin_40  wttrdfin_41  \n",
-      "0                0            0  \n",
-      "1                0            0  \n",
-      "2                0            0  \n",
-      "3                0            0  \n",
-      "4                0            0  \n",
-      "...            ...          ...  \n",
-      "17853            0            0  \n",
-      "17854            0            0  \n",
-      "17855            0            0  \n",
-      "17856            0            0  \n",
-      "17857            0            0  \n",
-      "\n",
-      "[17858 rows x 2417 columns]\n"
+      "0        0\n",
+      "1        0\n",
+      "2        0\n",
+      "3        0\n",
+      "4        0\n",
+      "        ..\n",
+      "17853    0\n",
+      "17854    0\n",
+      "17855    0\n",
+      "17856    0\n",
+      "17857    0\n",
+      "Name: tripno_22, Length: 17858, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "# Assuming df_trip and df_person are already defined\n",
-    "max_trips = df_trip['tripno'].max()\n",
-    "\n",
     "df_consolidated = df_person.copy()\n",
+    "df_trip[\"staying_time\"] = 0\n",
+    "max_trips = df_trip['tripno'].max()\n",
     "\n",
     "# Create an empty list to hold the DataFrames for concatenation\n",
     "dfs_to_concat = [df_consolidated]\n",
@@ -398,9 +343,7 @@
     "        dfs_to_concat.append(temp_df)\n",
     "\n",
     "# Concatenate all the DataFrames in the list along the axis 1 (columns)\n",
-    "df_consolidated = pd.concat(dfs_to_concat, axis=1)\n",
-    "\n",
-    "print(df_consolidated)"
+    "df_consolidated = pd.concat(dfs_to_concat, axis=1)"
    ]
   },
   {
