renamed output csv file to master_trips.csv

--- a/consolidate.ipynb
+++ b/consolidate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -164,33 +164,6 @@
       "17857                0.0             0.0       2                         0.0  \n",
       "\n",
       "[17858 rows x 80 columns]\n",
-      "          ID  household_id         vehid  vehnum    year  bodytype       make  \\\n",
-      "0          1     140000006  140000006101       1  2017.0       3.0       Jeep   \n",
-      "1          2     140000006  140000006102       2  1997.0       4.0  Chevrolet   \n",
-      "2          3     140000013  140000013101       1  2014.0       1.0    Hyundai   \n",
-      "3          4     140000013  140000013102       2  2008.0       1.0    Hyundai   \n",
-      "4          5     140000013  140000013103       3  2004.0       3.0      Honda   \n",
-      "...      ...           ...           ...     ...     ...       ...        ...   \n",
-      "15306  15307     180256058  180256058101       1  2016.0       3.0     Toyota   \n",
-      "15307  15308     180256271  180256271101       1  2012.0       1.0      Honda   \n",
-      "15308  15309     180256360  180256360101       1  2016.0       1.0     Subaru   \n",
-      "15309  15310     180256797  180256797101       1  2018.0       1.0      Honda   \n",
-      "15310  15311     180256875  180256875101       1  2011.0       3.0      Honda   \n",
-      "\n",
-      "                  model  fueltype  tolltransponder  \n",
-      "0               Compass       1.0              2.0  \n",
-      "1      S-10/T-10 Pickup       1.0              2.0  \n",
-      "2                Sonata       4.0              2.0  \n",
-      "3                Accent       1.0              2.0  \n",
-      "4                 Pilot       1.0              2.0  \n",
-      "...                 ...       ...              ...  \n",
-      "15306        Highlander       1.0              2.0  \n",
-      "15307            Accord       1.0              2.0  \n",
-      "15308               WRX       1.0              1.0  \n",
-      "15309            Accord       1.0              1.0  \n",
-      "15310              CR-V       1.0              2.0  \n",
-      "\n",
-      "[15311 rows x 10 columns]\n",
       "       household_id    person_id         tripid  persno  tripno  \\\n",
       "0         140000006  14000000601  1400000060101       1       1   \n",
       "1         140000006  14000000601  1400000060102       1       2   \n",
@@ -276,23 +249,23 @@
    "source": [
     "df_household = pd.read_excel('household_bmc.xlsx')\n",
     "df_person = pd.read_excel('person_bmc.xlsx')\n",
-    "df_vehicle = pd.read_excel('vehicle_bmc.xlsx')\n",
+    "#df_vehicle = pd.read_excel('vehicle_bmc.xlsx')\n",
     "df_trip = pd.read_excel('trip_bmc.xlsx')\n",
     "\n",
     "df_household.replace(-9, np.nan, inplace=True)\n",
     "df_person.replace(-9, np.nan, inplace=True)\n",
-    "df_vehicle.replace(-9, np.nan, inplace=True)\n",
+    "#df_vehicle.replace(-9, np.nan, inplace=True)\n",
     "df_trip.replace(-9, np.nan, inplace=True)\n",
     "\n",
     "print(df_household)\n",
     "print(df_person)\n",
-    "print(df_vehicle)\n",
+    "#print(df_vehicle)\n",
     "print(df_trip)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,11 +293,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_consolidated = df_person.copy()\n",
+    "#df_consolidated = df_person.copy()\n",
+    "df_consolidated = pd.merge(df_person, df_household, on='household_id', how='outer')\n",
     "max_trips = df_trip['tripno'].max()\n",
     "trip_invariants = ['household_id', 'person_id', 'trip_id', 'persno', 'tripno']\n",
     "\n",
@@ -343,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -351,11 +325,11 @@
      "output_type": "stream",
      "text": [
       "       household_id    person_id  persno transit_commuter  Travel Mode_TAT  \\\n",
-      "0         140000374  14000037402       2              NaN              NaN   \n",
-      "1         140000376  14000037601       1              NaN              NaN   \n",
-      "2         140000382  14000038201       1              NaN              NaN   \n",
-      "3         140000384  14000038401       1              NaN              NaN   \n",
-      "4         140000390  14000039001       1              NaN              NaN   \n",
+      "0         140000006  14000000601       1              NaN              NaN   \n",
+      "1         140000013  14000001301       1              NaN              NaN   \n",
+      "2         140000013  14000001302       2              NaN              NaN   \n",
+      "3         140000017  14000001701       1              NaN              NaN   \n",
+      "4         140000017  14000001702       2              NaN              NaN   \n",
       "...             ...          ...     ...              ...              ...   \n",
       "17853     180256058  18025605804       4              NaN              NaN   \n",
       "17854     180256271  18025627101       1              NaN              NaN   \n",
@@ -364,11 +338,11 @@
       "17857     180256875  18025687501       1              NaN              NaN   \n",
       "\n",
       "       Trip Purpose_TAT   age  Non-Motorized Travel  transit_travel_mode  \\\n",
-      "0                   NaN  81.0                   NaN                  NaN   \n",
-      "1                   NaN  53.0                   1.0                  NaN   \n",
-      "2                   NaN  77.0                   NaN                  NaN   \n",
-      "3                   NaN  84.0                   NaN                  NaN   \n",
-      "4                   NaN  74.0                   NaN                  NaN   \n",
+      "0                   NaN  82.0                   NaN                  NaN   \n",
+      "1                   NaN  53.0                   NaN                  NaN   \n",
+      "2                   NaN  57.0                   NaN                  NaN   \n",
+      "3                   NaN  34.0                   NaN                  NaN   \n",
+      "4                   NaN  33.0                   NaN                  NaN   \n",
       "...                 ...   ...                   ...                  ...   \n",
       "17853               NaN  10.0                   NaN                  NaN   \n",
       "17854               NaN  75.0                   NaN                  NaN   \n",
@@ -415,7 +389,7 @@
       "17856              NaN              NaN              NaN              NaN  \n",
       "17857              NaN              NaN              NaN              NaN  \n",
       "\n",
-      "[17858 rows x 2417 columns]\n"
+      "[17858 rows x 2482 columns]\n"
      ]
     }
    ],
@@ -444,11 +418,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_consolidated.to_csv('filename.csv', index=False)"
+    "df_consolidated.to_csv('master_trips.csv', index=False)"
    ]
   }
  ],
